--- a/source/_posts/HDU-2544 最短路.md
+++ b/source/_posts/HDU-2544 最短路.md
@@ -56,10 +56,10 @@ categories: Algorithm
 ### 代码：
 
 ```c++
-#include <iostream>
-#include <cstring>
-#include <vector>
-#include <queue>
+include <iostream>
+include <cstring>
+include <vector>
+include <queue>
 using namespace std;
 
 const int INF = 0x3f3f3f3f;
