change gitignore && post 模版;delete try.jpg

--- a/source/_posts/容斥原理.md
+++ b/source/_posts/容斥原理.md
@@ -1,6 +1,7 @@
 ---
 title: 容斥原理
 date: 2016-12-28 16:31:57
+mathjax: true
 tags: 
     - 组合数学
     - 容斥原理
@@ -15,7 +16,7 @@ categories: Algorithm
 
 **原理公式:**
 
-$$|\bigcup A_i|=\sum_{1\leq i \leq m} |A_i|-\sum_{1\leq i \leq j \leq m} |A_i \cap A_j|+\sum_{1\leq i \leq j \leq k \leq m} |A_i \cap A_j \cap A_k|- \cdots +(-1)^{m+1} \sum |A_1 \cap A_2 \cap A_3 \cap A_4\cdots\cap A_m|$$
+$$ |\bigcup A_i|=\sum_{1\leq i \leq m} |A_i|-\sum_{1\leq i \leq j \leq m} |A_i \cap A_j|+\sum_{1\leq i \leq j \leq k \leq m} |A_i \cap A_j \cap A_k|- \cdots +(-1)^{m+1} \sum |A_1 \cap A_2 \cap A_3 \cap A_4\cdots\cap A_m| $$
 
 ## 例题
 
