修改md的公式

--- a/source/_posts/康托展开.md
+++ b/source/_posts/康托展开.md
@@ -14,7 +14,7 @@ categories: Algorithm
 
 ## 公式：
 
-$X=a_n(n-1)!+a_{n-1}(n-2)!+\ldots+a_1\cdot0! + 1$
+$$X=a_n(n-1)!+a_{n-1}(n-2)!+\ldots+a_1\cdot0! + 1$$
 
 其中，$a_i$为整数，并且$0\le a_i \le i,1\le i \le n.$
 
